fixed overflow

--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ body {
     padding: 0;
     text-align: center;
     border: none;
-    border-top: solid 0.25rem;
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+    border-top: solid 0.2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
   
   hr.star-light {
@@ -28,7 +28,7 @@ body {
   }
   
   hr.star-dark {
-    border-color: #2C3E50;
+    border-color: rgb(55, 79, 102);
   }
   
   section {
